fix: avoid hardcoded 'in' operator in validation and transformation (#5619)